unpackaged/main/default/objects/Historical_Claim__c/Historical_Claim__c.object-meta.xml
<CustomObject>
    <label>Historical Claim</label>
    <nameField>
        <displayFormat>HC-{0000000}</displayFormat>
        <label>Historical Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>