unpackaged/main/default/objects/Historical_Claim__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historical Claims</relationshipLabel>
    <relationshipName>Historical_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>