unpackaged/main/default/objects/Historical_Claim__c/fields/Adjudicated_NDC_Units_Count__c.field-meta.xml
<CustomField>
    <fullName>Adjudicated_NDC_Units_Count__c</fullName>
    <label>Adjudicated NDC Units Count</label>
    <length>18</length>
    <type>Text</type>
</CustomField>