unpackaged/main/default/objects/Historical_Claim__c/fields/Adjudication_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjudication_Date__c</fullName>
    <label>Adjudication Date</label>
    <type>Date</type>
</CustomField>