unpackaged/main/default/objects/Historical_Claim__c/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <label>Authorization Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>