unpackaged/main/default/objects/Historical_Claim__c/fields/Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Representative__c</fullName>
    <label>Authorized Representative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>