unpackaged/main/default/objects/Historical_Claim__c/fields/Billing_Provider_Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Address_Line__c</fullName>
    <label>Billing Provider Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>