unpackaged/main/default/objects/Historical_Claim__c/fields/Billing_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_City__c</fullName>
    <label>Billing Provider City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>