unpackaged/main/default/objects/Historical_Claim__c/fields/Billing_Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_First_Name__c</fullName>
    <label>Billing Provider First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>