unpackaged/main/default/objects/Historical_Claim__c/fields/Billing_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_State__c</fullName>
    <label>Billing Provider State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>