unpackaged/main/default/objects/Historical_Claim__c/fields/Billing_Provider_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_State_Code__c</fullName>
    <label>Billing Provider State Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>