unpackaged/main/default/objects/Historical_Claim__c/fields/Claim_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Claim_Identifier__c</fullName>
    <label>Claim Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>