unpackaged/main/default/objects/Historical_Claim__c/fields/Claim_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Claim_Indicator__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Indicator</label>
    <type>Text</type>
</CustomField>