unpackaged/main/default/objects/Historical_Claim__c/fields/Claim_Information__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Information</label>
    <referenceTo>Claim_Information__c</referenceTo>
    <relationshipLabel>Historical Claims</relationshipLabel>
    <relationshipName>Historical_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>