unpackaged/main/default/objects/Historical_Claim__c/fields/Claim_Line_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Claim_Line_Identifier__c</fullName>
    <label>Claim Line Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>