unpackaged/main/default/objects/Historical_Claim__c/fields/COB_Indicator__c.field-meta.xml
<CustomField>
    <fullName>COB_Indicator__c</fullName>
    <formula>CASE( COB_Code__c,
&quot;0&quot;, &quot;N/A&quot;,
&quot;1&quot;, &quot;Other Carrier Primary&quot;,
&quot;2&quot;, &quot;100% allowable COB or Govt Exc&quot;,
&quot;3&quot;, &quot;No Fault&quot;,
&quot;4&quot;, &quot;Unknown&quot;,
&quot;5&quot;, &quot;MOB&quot;,
&quot;8&quot;, &quot;Medicaid&quot;,
&quot;?&quot;, &quot;Other Cov. - Not Defined&quot;,
&quot;A&quot;, &quot;Estimate Medicare Part A&quot;,
&quot;B&quot;, &quot;Estimate Medicare Part B&quot;,
&quot;N&quot;, &quot;NO COB&quot;,
&quot;O&quot;, &quot;Unknown&quot;,
&quot;P&quot;, &quot;Other Carrier is Primary&quot;,
&quot;S&quot;, &quot;Aetna is Primary&quot;,
&quot;No COB&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COB Indicator</label>
    <type>Text</type>
</CustomField>