unpackaged/main/default/objects/Historical_Claim__c/fields/Coinsurance_Amount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Coinsurance_Amount_Percentage__c</fullName>
    <label>Coinsurance Amount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>