unpackaged/main/default/objects/Historical_Claim__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <label>Control Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>