unpackaged/main/default/objects/Historical_Claim__c/fields/Coverage_Code_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code_Indicator__c</fullName>
    <label>Coverage Code Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>