unpackaged/main/default/objects/Historical_Claim__c/fields/CSA_Control__c.field-meta.xml
<CustomField>
    <fullName>CSA_Control__c</fullName>
    <label>CSA Control</label>
    <length>50</length>
    <type>Text</type>
</CustomField>