unpackaged/main/default/objects/Historical_Claim__c/fields/Date_Of_Service_From__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Service_From__c</fullName>
    <label>Date Of Service From</label>
    <type>Date</type>
</CustomField>