unpackaged/main/default/objects/Historical_Claim__c/fields/External_Prior_Authorization__c.field-meta.xml
<CustomField>
    <fullName>External_Prior_Authorization__c</fullName>
    <label>External Prior  Authorization</label>
    <type>TextArea</type>
</CustomField>