unpackaged/main/default/objects/Historical_Claim__c/fields/Gross_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Paid_Amount__c</fullName>
    <label>Gross Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>