unpackaged/main/default/objects/Historical_Claim__c/fields/ICD9_Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD9_Procedure_Code__c</fullName>
    <label>ICD9 Procedure Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>