unpackaged/main/default/objects/Historical_Claim__c/fields/Member_Eligibility_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Eligibility_From_Date__c</fullName>
    <label>Member Eligibility From Date</label>
    <type>Date</type>
</CustomField>