unpackaged/main/default/objects/Historical_Claim__c/fields/Member_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Eligibility_Status__c</fullName>
    <label>Member Eligibility Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>