unpackaged/main/default/objects/Historical_Claim__c/fields/Member_Eligibility_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Eligibility_To_Date__c</fullName>
    <label>Member Eligibility To Date</label>
    <type>Date</type>
</CustomField>