unpackaged/main/default/objects/Historical_Claim__c/fields/Member_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Member_Out_of_Pocket__c</fullName>
    <label>Member Out of Pocket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>