unpackaged/main/default/objects/Historical_Claim__c/fields/Name_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Name_Type_Code__c</fullName>
    <label>Name Type Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>