unpackaged/main/default/objects/Historical_Claim__c/fields/National_Drug_Code__c.field-meta.xml
<CustomField>
    <fullName>National_Drug_Code__c</fullName>
    <label>National Drug Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>