unpackaged/main/default/objects/Historical_Claim__c/fields/Original_UCK_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_UCK_ID__c</fullName>
    <label>Original UCK ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>