unpackaged/main/default/objects/Historical_Claim__c/fields/Patient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email_Address__c</fullName>
    <label>Patient Email Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>