unpackaged/main/default/objects/Historical_Claim__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>