unpackaged/main/default/objects/Historical_Claim__c/fields/Patient_Sex__c.field-meta.xml
<CustomField>
    <fullName>Patient_Sex__c</fullName>
    <label>Patient Sex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>