unpackaged/main/default/objects/Historical_Claim__c/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <label>Patient State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>