unpackaged/main/default/objects/Historical_Claim__c/fields/Patient_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Zip_Code__c</fullName>
    <label>Patient Zip Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>