unpackaged/main/default/objects/Historical_Claim__c/fields/Plan_Letter__c.field-meta.xml
<CustomField>
    <fullName>Plan_Letter__c</fullName>
    <label>Plan Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>