unpackaged/main/default/objects/Historical_Claim__c/fields/Plan_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Name__c</fullName>
    <label>Plan Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>