unpackaged/main/default/objects/Historical_Claim__c/fields/Preferred_Provider__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Provider__c</fullName>
    <label>Preferred Provider</label>
    <length>200</length>
    <type>Text</type>
</CustomField>