unpackaged/main/default/objects/Historical_Claim__c/fields/Primary_Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscriber_Name__c</fullName>
    <label>Primary Subscriber Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>