unpackaged/main/default/objects/Historical_Claim__c/fields/Service_Provider_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Address_Line_1__c</fullName>
    <label>Service Provider Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>