unpackaged/main/default/objects/Historical_Claim__c/fields/Service_Provider_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Address_Line_2__c</fullName>
    <label>Service Provider Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>