unpackaged/main/default/objects/Historical_Claim__c/fields/Service_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_City__c</fullName>
    <label>Service Provider City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>