unpackaged/main/default/objects/Historical_Claim__c/fields/Service_Provider_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Specialty__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider Specialty</label>
    <type>Text</type>
</CustomField>