unpackaged/main/default/objects/Historical_Claim__c/fields/Service_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_State__c</fullName>
    <label>Service Provider State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>