unpackaged/main/default/objects/Historical_Claim__c/fields/Service_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_To_Date__c</fullName>
    <label>Service To Date</label>
    <type>Date</type>
</CustomField>