unpackaged/main/default/objects/Historical_Claim__c/fields/Servicing_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_City__c</fullName>
    <label>Servicing Provider City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>