unpackaged/main/default/objects/Historical_Claim__c/fields/Subscriber_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Address_Line_1__c</fullName>
    <label>Subscriber Address Line 1</label>
    <type>TextArea</type>
</CustomField>