unpackaged/main/default/objects/Historical_Claim__c/fields/Subscriber_CUMB_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_CUMB_ID__c</fullName>
    <label>Subscriber CUMB ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>