unpackaged/main/default/objects/Historical_Claim__c/fields/Total_Copay__c.field-meta.xml
<CustomField>
    <fullName>Total_Copay__c</fullName>
    <label>Total Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>