unpackaged/main/default/objects/Historical_Claim__c/fields/Total_Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Copay_Amount__c</fullName>
    <label>Total Copay Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>