unpackaged/main/default/objects/Historical_Claim__c/fields/Total_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductible_Amount__c</fullName>
    <label>Total Deductible Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>