unpackaged/main/default/objects/Historical_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_CUMB_ID__c</columns>
    <columns>Claim_Information__c</columns>
    <columns>Claim_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Log__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Patient_Last_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>